tests/specs/ecosystem/kwhinnery/animals/0_0_17.test
kwhinnery/animals/0.0.17
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2834 [ERROR]: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.
export * from "./animal";
              ~~~~~~~~~~
    at file://<tmpdir>/types/mod.d.ts:1:15

TS2834 [ERROR]: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.
export * from "./cat";
              ~~~~~~~
    at file://<tmpdir>/types/mod.d.ts:2:15

TS2834 [ERROR]: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.
export * from "./dog";
              ~~~~~~~
    at file://<tmpdir>/types/mod.d.ts:3:15

Found 3 errors.

